kleine wijzigingen na de les.

--- a/demos/demo_univariate_modelling.ipynb
+++ b/demos/demo_univariate_modelling.ipynb
@@ -231,27 +231,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "caa02a92-337a-4cfd-a4bb-29653d25bf08",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_stationarity_test = adfuller(df['Consumption'], autolag='AIC')\n",
-    "print(\"P-value: \", data_stationarity_test[1])pacf = plot_pacf(data['Consumption'], lags=25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c206c61c-c67c-4a52-9673-4a23c610dea0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pacf = plot_pacf(df['Consumption'], lags=25)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a256af6d-4f8a-4787-96ff-05b8f1cd8a56",
    "metadata": {},
@@ -279,8 +258,7 @@
    "outputs": [],
    "source": [
     "model = AutoReg(train_df, lags=8).fit()\n",
-    "#model.summary()\n",
-    "type(test_df)"
+    "model.summary()\n"
    ]
   },
   {
@@ -291,6 +269,16 @@
    "outputs": [],
    "source": [
     "test_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "647f2efb-6ea5-4975-8699-5d8e03045459",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = model.predict(start=len(train_df), end=(len(df)-1), dynamic=False)"
    ]
   },
   {
