Added dickey-fuller test to arma.

--- a/demos/demo-arma-and-friends.ipynb
+++ b/demos/demo-arma-and-friends.ipynb
@@ -14,7 +14,9 @@
     "import matplotlib.dates as mdates\n",
     "import datetime\n",
     "\n",
-    "import statsmodels.api as sm"
+    "import statsmodels.api as sm\n",
+    "from statsmodels.tsa.stattools import adfuller\n",
+    "import neurokit2 as nk"
    ]
   },
   {
@@ -51,12 +53,83 @@
     "\n",
     "Many time-series exhibit trends and seasonality, while many others assume stationarity. If a time-series is stationary, its mean and standard deviation stays constant over time. This implies that the time-series has no trend and no cyclic variability. Therefore the removal of irregular components, trends, and seasonal fluctuations is an intrinsic aspect of applying classical models. The models then forecast what's left after this removal.\n",
     "\n",
-    "To apply these classical models, a time-series usually should be decomposed into different components. This is usually done as follows:\n",
+    "## Dickey-Fuller test\n",
+    "To check for stationarity, we can use the [Dickey-Fuller Test](https://en.wikipedia.org/wiki/Dickey%E2%80%93Fuller_test). This test specifically checks for the presence of a unit root in the time series, which would indicate non-stationarity. A unit root means the series has a trend and is not stationary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f96b41c3-f5dc-4984-8104-a8b468e4942e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ecg_data = nk.ecg_simulate(duration=10)\n",
+    "nk.signal_plot(ecg_data, figsize=(12,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5efd9b88-9d21-43e7-ae14-6c7b0c8ac567",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = adfuller(ecg_data)\n",
     "\n",
-    "1. Test for stationarity\n",
-    "2. Differencing (if stationarity is detected)\n",
-    "3. Fit model and forecast\n",
-    "4. Add back the trends and seasonality"
+    "# Extract results\n",
+    "print(f'ADF Statistic: {result[0]}')\n",
+    "print(f'p-value: {result[1]}')\n",
+    "print(f'Critical Values: {result[4]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38eb6697-c822-4c07-8f9a-aac6484222f9",
+   "metadata": {},
+   "source": [
+    "We have a very small `p-value`, which means that our data is stationary. That resonates with the three characteristics of stationary data. Lets' do the same for more random data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0e8b865-ac78-4030-b357-ed16d7912a9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(42)\n",
+    "random_walk = np.random.normal(loc=0, scale=1, size=1000).cumsum()\n",
+    "random_walk_series = pd.Series(random_walk)\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(random_walk_series, color='purple')\n",
+    "plt.title('Random Walk (Non-Stationary Data)')\n",
+    "plt.xlabel('Time')\n",
+    "plt.ylabel('Value')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a79526ff-85e7-4acc-a85f-8abbf61aa070",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = adfuller(random_walk_series)\n",
+    "\n",
+    "print(f'ADF Statistic: {result[0]}')\n",
+    "print(f'p-value: {result[1]}')\n",
+    "print(f'Critical Values: {result[4]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be19ded0-0257-4584-9e16-090825fa393e",
+   "metadata": {},
+   "source": [
+    "The ADF statistic is higher than the critical values at the 1%, 5%, and 10% levels. Since the p-value is much greater than 0.05, we fail to reject the null hypothesis that the data has a unit root. Therefore, the data is non-stationary, which is expected since we generated it as a random walk (a typical non-stationary series)"
    ]
   },
   {
