--- a/assessments/01_glucose.ipynb
+++ b/assessments/01_glucose.ipynb
@@ -56,7 +56,7 @@
     "1. Copy the original data from assemblix to your data directory\n",
     "2. In the first week read part 1 and conduct the data inspections according the part 1 instructions. Enhance and expand your inspection when needed, but make sure you keep a balance between essential analysis and nice to haves. Be prepared to discuss and demonstrate the solution next week's first session.\n",
     "3. In the second week read part 2 and conduct the data exploration according the part 2 instructions. Enhance and expand your inspection when needed, but make sure you keep a balance between essential analysis and nice to haves. Be prepared to discuss and demonstrate the solution in the third week's first session.\n",
-    "4. Upload the solution of this study case in a repository and submit the link to the blackboard assignment. Make sure that your repository is private and invite your teachers and tutors. Please submit your work (even unfinished) before the deadline to receive feedback.\n",
+    "4. Upload the solution of this study case in a repository and submit the link to the brightspace assignment. Make sure that your repository is private and invite your teachers and tutors. Please submit your work (even unfinished) before the deadline to receive feedback.\n",
     "5. You are welcome to collaborate in small groups, but please ensure that you acknowledge each member's contributions and engage in discussions to collectively assess the outcomes.\n",
     "   \n",
     "[1] Elouafiq, I. Data & Experiments \n",
